# minigit

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  DataStructures.hpp  LICENSE  README.md  branchmanager.hpp  commit.hpp  document.hpp  file.hpp  folder.hpp  minigit.hpp  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT_EN.md  BUG_REPORT_ES.md  FEATURE_REQUEST_EN.md  FEATURE_REQUEST_ES.md
.github/workflows/: cmake.yml
src/: avl.hpp  branch.hpp  branchmanager.hpp  change.hpp  commit.hpp  diffMethods.hpp  diffUtils.hpp  document.hpp  file.hpp  folder.hpp  hashgen.hpp  hashtable.hpp  main.cpp  minigit.hpp  repository.hpp  repositoryfinder.hpp  stash.hpp  stashmanager.hpp  user.hpp
